# stratex

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  config.py  database.py  main.py  models.py  process_ai.py  railway.toml  requirements.txt  run_pipeline.py  scheduler.py
.husky/: pre-commit
ai/: __init__.py  analyzer.py  extractor.py  knowledge.py  schemas.py
api/: __init__.py  app.py
backend/: README.md
backend/auth/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/auth/alembic/: env.py
backend/auth/alembic/versions/: 0001_create_users.py
backend/auth/app/: main.py
backend/auth/app/api/v1/: auth.py  router.py
backend/auth/app/core/: config.py  deps.py  limiter.py  security.py
backend/auth/app/db/: base.py  session.py
backend/auth/app/models/: __init__.py  user.py
backend/auth/app/schemas/: auth.py
backend/auth/app/scripts/: create_tables.py
backend/auth/app/services/: email.py  user_service.py
backend/auth/tests/: conftest.py  test_auth.py
frontend/: .env.example  .prettierignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/src/: auth.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: brand-mark.tsx  providers.tsx
frontend/src/lib/: api.ts  (+3 more)
notifications/: __init__.py  alerts.py
scrapers/: __init__.py  base.py  catalog.py  congresos.py  congresos_scraper.py  dof_scraper.py  full_text.py  generic_rss.py  http_client.py  registry.py
scripts/: run_daily.sh
(+27 files in other folders)
